--- a/index.ipynb
+++ b/index.ipynb
@@ -746,9 +746,9 @@
     "layout = {'title': 'Scatter Plot'}\n",
     "trace_of_data = {'x': [1.5, 2.5, 3.5, 4.5], 'y': [3, 5, 7, 9], 'marker': {'color': 'blue'}, 'name': 'Our nice line'}\n",
     "\n",
-    "figure = {'data': [trace_of_data], 'layout': layout}\n",
+    "#figure = {'data': [trace_of_data], 'layout': layout}\n",
     "\n",
-    "plotly.offline.iplot(figure)"
+    "plotly.offline.iplot(igure)"
    ]
   },
   {
