automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -748,7 +748,7 @@
     "\n",
     "#figure = {'data': [trace_of_data], 'layout': layout}\n",
     "\n",
-    "plotly.offline.iplot(igure)"
+    "plotly.offline.iplot(trace_of_data)"
    ]
   },
   {
