automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -727,13 +727,15 @@
          ]
         }
        ],
-       "layout": {}
+       "layout": {
+        "title": "Scatter Plot"
+       }
       },
       "text/html": [
-       "<div id=\"2fb4b6b0-846a-4f61-a19a-7a0e1563b776\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"2fb4b6b0-846a-4f61-a19a-7a0e1563b776\", [{\"x\": [1.5, 2.5, 3.5, 4.5], \"y\": [3, 5, 7, 9], \"marker\": {\"color\": \"blue\"}, \"name\": \"Our nice line\"}], {}, {\"showLink\": [{\"title\": \"Scatter Plot\"}], \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"0faed008-2719-4c81-9ce4-29432cf60688\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"0faed008-2719-4c81-9ce4-29432cf60688\", [{\"x\": [1.5, 2.5, 3.5, 4.5], \"y\": [3, 5, 7, 9], \"marker\": {\"color\": \"blue\"}, \"name\": \"Our nice line\"}], {\"title\": \"Scatter Plot\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"2fb4b6b0-846a-4f61-a19a-7a0e1563b776\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"2fb4b6b0-846a-4f61-a19a-7a0e1563b776\", [{\"x\": [1.5, 2.5, 3.5, 4.5], \"y\": [3, 5, 7, 9], \"marker\": {\"color\": \"blue\"}, \"name\": \"Our nice line\"}], {}, {\"showLink\": [{\"title\": \"Scatter Plot\"}], \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"0faed008-2719-4c81-9ce4-29432cf60688\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"0faed008-2719-4c81-9ce4-29432cf60688\", [{\"x\": [1.5, 2.5, 3.5, 4.5], \"y\": [3, 5, 7, 9], \"marker\": {\"color\": \"blue\"}, \"name\": \"Our nice line\"}], {\"title\": \"Scatter Plot\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
@@ -746,7 +748,7 @@
     "\n",
     "figure = {'data': [trace_of_data], 'layout': layout}\n",
     "\n",
-    "plotly.offline.iplot([trace)"
+    "plotly.offline.iplot(figure)"
    ]
   },
   {
